Post-build events for boards

--- a/Meccha.Board.Tts/Meccha.Board.Tts.csproj
+++ b/Meccha.Board.Tts/Meccha.Board.Tts.csproj
@@ -51,4 +51,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)$(TargetFileName)" "$(SolutionDir)Meccha\bin\$(ConfigurationName)\" /F /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
